--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -35,8 +35,7 @@
   background: #82c14f; }
 
 html, body {
-  -webkit-font-smoothing: antialiased;
-  overflow-x: hidden; }
+  -webkit-font-smoothing: antialiased; }
 
 iframe {
   border: none; }
@@ -505,6 +504,8 @@ select:not([multiple]) {
       -ms-transition: all 0.2s ease-in-out 0s;
       -o-transition: all 0.2s ease-in-out 0s;
       transition: all 0.2s ease-in-out 0s; }
+    .site-branding .site-logo .retina-logo {
+      display: none; }
 
 #main-nav-tool {
   position: absolute;
@@ -1064,8 +1065,301 @@ select:not([multiple]) {
   top: 32px !important; }
 
 /*
- * 10.4. Header color version
+ * 10.4. Header mobile
  */
+#header-content-mobile {
+  position: relative; }
+  #header-content-mobile .site-branding {
+    float: left; }
+  #header-content-mobile .header-mobile-tools {
+    position: absolute;
+    -webkit-transform: translateY(-50%);
+    -khtml-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    top: 50%;
+    right: 0; }
+    #header-content-mobile .header-mobile-tools a {
+      color: #636363;
+      float: left;
+      margin-left: 15px;
+      padding: 0 0 0 10px; }
+      #header-content-mobile .header-mobile-tools a.mobile-cart {
+        position: relative; }
+        #header-content-mobile .header-mobile-tools a.mobile-cart span {
+          position: absolute;
+          width: 15px;
+          height: 15px;
+          background: #82c14f;
+          -webkit-border-radius: 50%;
+          -khtml-border-radius: 50%;
+          -moz-border-radius: 50%;
+          -ms-border-radius: 50%;
+          -o-border-radius: 50%;
+          border-radius: 50%;
+          top: -5px;
+          right: -10px;
+          font-size: 10px;
+          text-align: center;
+          line-height: 17px;
+          color: #FFFFFF; }
+      #header-content-mobile .header-mobile-tools a:first-child {
+        margin-left: 0; }
+
+#hamburger-icon {
+  padding: 10px;
+  margin-top: 5px; }
+  #hamburger-icon .hamburger-icon-inner {
+    width: 20px;
+    height: 12px;
+    position: relative;
+    display: block; }
+  #hamburger-icon .line {
+    display: block;
+    background: #636363;
+    width: 20px;
+    height: 2px;
+    position: absolute;
+    left: 0;
+    -webkit-border-radius: 1px;
+    -khtml-border-radius: 1px;
+    -moz-border-radius: 1px;
+    -ms-border-radius: 1px;
+    -o-border-radius: 1px;
+    border-radius: 1px;
+    -webkit-transition: all 0.4s;
+    -khtml-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s; }
+    #hamburger-icon .line.line-1 {
+      top: 0; }
+    #hamburger-icon .line.line-2 {
+      top: 50%; }
+    #hamburger-icon .line.line-3 {
+      top: 100%; }
+  #hamburger-icon.active .line-1 {
+    -webkit-transform: translateY(6px) translateX(0) rotate(45deg);
+    -khtml-transform: translateY(6px) translateX(0) rotate(45deg);
+    -moz-transform: translateY(6px) translateX(0) rotate(45deg);
+    -ms-transform: translateY(6px) translateX(0) rotate(45deg);
+    -o-transform: translateY(6px) translateX(0) rotate(45deg);
+    transform: translateY(6px) translateX(0) rotate(45deg); }
+  #hamburger-icon.active .line-2 {
+    top: 100%;
+    -webkit-transform: translateY(6px);
+    -khtml-transform: translateY(6px);
+    -moz-transform: translateY(6px);
+    -ms-transform: translateY(6px);
+    -o-transform: translateY(6px);
+    transform: translateY(6px); }
+  #hamburger-icon.active .line-3 {
+    -webkit-transform: translateY(-6px) translateX(0) rotate(-45deg);
+    -khtml-transform: translateY(-6px) translateX(0) rotate(-45deg);
+    -moz-transform: translateY(-6px) translateX(0) rotate(-45deg);
+    -ms-transform: translateY(-6px) translateX(0) rotate(-45deg);
+    -o-transform: translateY(-6px) translateX(0) rotate(-45deg);
+    transform: translateY(-6px) translateX(0) rotate(-45deg); }
+
+.main-nav-mobile {
+  overflow-y: scroll;
+  position: fixed;
+  width: 100%;
+  max-height: 400px;
+  background: #fff none repeat scroll 0 0;
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+  display: none;
+  z-index: 99999; }
+  .main-nav-mobile li {
+    position: relative; }
+  .main-nav-mobile > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+    .main-nav-mobile > ul > li {
+      position: relative;
+      -webkit-transform: translateX(-30px);
+      -khtml-transform: translateX(-30px);
+      -moz-transform: translateX(-30px);
+      -ms-transform: translateX(-30px);
+      -o-transform: translateX(-30px);
+      transform: translateX(-30px);
+      filter: alpha(opacity=0);
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+      -webkit-opacity: 0;
+      -khtml-opacity: 0;
+      -moz-opacity: 0;
+      -ms-opacity: 0;
+      -o-opacity: 0;
+      opacity: 0; }
+      .main-nav-mobile > ul > li:nth-child(1) {
+        -webkit-transition: all 0.3s ease-out 0.1s;
+        -khtml-transition: all 0.3s ease-out 0.1s;
+        -moz-transition: all 0.3s ease-out 0.1s;
+        -ms-transition: all 0.3s ease-out 0.1s;
+        -o-transition: all 0.3s ease-out 0.1s;
+        transition: all 0.3s ease-out 0.1s; }
+      .main-nav-mobile > ul > li:nth-child(2) {
+        -webkit-transition: all 0.3s ease-out 0.2s;
+        -khtml-transition: all 0.3s ease-out 0.2s;
+        -moz-transition: all 0.3s ease-out 0.2s;
+        -ms-transition: all 0.3s ease-out 0.2s;
+        -o-transition: all 0.3s ease-out 0.2s;
+        transition: all 0.3s ease-out 0.2s; }
+      .main-nav-mobile > ul > li:nth-child(3) {
+        -webkit-transition: all 0.3s ease-out 0.3s;
+        -khtml-transition: all 0.3s ease-out 0.3s;
+        -moz-transition: all 0.3s ease-out 0.3s;
+        -ms-transition: all 0.3s ease-out 0.3s;
+        -o-transition: all 0.3s ease-out 0.3s;
+        transition: all 0.3s ease-out 0.3s; }
+      .main-nav-mobile > ul > li:nth-child(4) {
+        -webkit-transition: all 0.3s ease-out 0.4s;
+        -khtml-transition: all 0.3s ease-out 0.4s;
+        -moz-transition: all 0.3s ease-out 0.4s;
+        -ms-transition: all 0.3s ease-out 0.4s;
+        -o-transition: all 0.3s ease-out 0.4s;
+        transition: all 0.3s ease-out 0.4s; }
+      .main-nav-mobile > ul > li:nth-child(5) {
+        -webkit-transition: all 0.3s ease-out 0.5s;
+        -khtml-transition: all 0.3s ease-out 0.5s;
+        -moz-transition: all 0.3s ease-out 0.5s;
+        -ms-transition: all 0.3s ease-out 0.5s;
+        -o-transition: all 0.3s ease-out 0.5s;
+        transition: all 0.3s ease-out 0.5s; }
+      .main-nav-mobile > ul > li:nth-child(6) {
+        -webkit-transition: all 0.3s ease-out 0.6s;
+        -khtml-transition: all 0.3s ease-out 0.6s;
+        -moz-transition: all 0.3s ease-out 0.6s;
+        -ms-transition: all 0.3s ease-out 0.6s;
+        -o-transition: all 0.3s ease-out 0.6s;
+        transition: all 0.3s ease-out 0.6s; }
+      .main-nav-mobile > ul > li:nth-child(7) {
+        -webkit-transition: all 0.3s ease-out 0.7s;
+        -khtml-transition: all 0.3s ease-out 0.7s;
+        -moz-transition: all 0.3s ease-out 0.7s;
+        -ms-transition: all 0.3s ease-out 0.7s;
+        -o-transition: all 0.3s ease-out 0.7s;
+        transition: all 0.3s ease-out 0.7s; }
+      .main-nav-mobile > ul > li:nth-child(8) {
+        -webkit-transition: all 0.3s ease-out 0.8s;
+        -khtml-transition: all 0.3s ease-out 0.8s;
+        -moz-transition: all 0.3s ease-out 0.8s;
+        -ms-transition: all 0.3s ease-out 0.8s;
+        -o-transition: all 0.3s ease-out 0.8s;
+        transition: all 0.3s ease-out 0.8s; }
+      .main-nav-mobile > ul > li:nth-child(9) {
+        -webkit-transition: all 0.3s ease-out 0.9s;
+        -khtml-transition: all 0.3s ease-out 0.9s;
+        -moz-transition: all 0.3s ease-out 0.9s;
+        -ms-transition: all 0.3s ease-out 0.9s;
+        -o-transition: all 0.3s ease-out 0.9s;
+        transition: all 0.3s ease-out 0.9s; }
+      .main-nav-mobile > ul > li:nth-child(10) {
+        -webkit-transition: all 0.3s ease-out 1s;
+        -khtml-transition: all 0.3s ease-out 1s;
+        -moz-transition: all 0.3s ease-out 1s;
+        -ms-transition: all 0.3s ease-out 1s;
+        -o-transition: all 0.3s ease-out 1s;
+        transition: all 0.3s ease-out 1s; }
+      .main-nav-mobile > ul > li > a {
+        border-bottom: 1px solid #e5e5e5;
+        color: #c5c5c5;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 0.075em;
+        display: block;
+        padding: 10px 60px 10px 15px;
+        position: relative;
+        font-size: 13px; }
+        .main-nav-mobile > ul > li > a:hover {
+          color: #000000; }
+      .main-nav-mobile > ul > li a > .open-submenu {
+        cursor: pointer;
+        height: 100%;
+        line-height: 50px;
+        position: absolute;
+        right: 0;
+        text-align: center;
+        top: 0;
+        width: 40px; }
+        .main-nav-mobile > ul > li a > .open-submenu:after {
+          font-size: 15px;
+          font-family: FontAwesome;
+          content: "";
+          font-style: normal;
+          font-weight: normal; }
+      .main-nav-mobile > ul > li ul.sub-menu-dropdown,
+      .main-nav-mobile > ul > li div.kt-megamenu-wrapper {
+        border-bottom: 1px solid #e5e5e5;
+        display: none; }
+      .main-nav-mobile > ul > li ul.sub-menu-dropdown,
+      .main-nav-mobile > ul > li ul.sub-menu-megamenu {
+        margin: 0;
+        padding: 0;
+        list-style: none; }
+        .main-nav-mobile > ul > li ul.sub-menu-dropdown li a,
+        .main-nav-mobile > ul > li ul.sub-menu-megamenu li a {
+          padding: 0 10px 0 25px;
+          font-size: 13px;
+          display: block; }
+      .main-nav-mobile > ul > li ul.sub-menu-dropdown {
+        padding: 15px 0; }
+        .main-nav-mobile > ul > li ul.sub-menu-dropdown ul.sub-menu-dropdown {
+          border: medium none;
+          margin-left: 20px;
+          padding: 0; }
+      .main-nav-mobile > ul > li div.kt-megamenu-wrapper {
+        padding: 10px 0; }
+        .main-nav-mobile > ul > li div.kt-megamenu-wrapper > ul {
+          margin: 0;
+          padding: 0;
+          list-style: none; }
+          .main-nav-mobile > ul > li div.kt-megamenu-wrapper > ul > li {
+            margin-bottom: 10px; }
+            .main-nav-mobile > ul > li div.kt-megamenu-wrapper > ul > li > a,
+            .main-nav-mobile > ul > li div.kt-megamenu-wrapper > ul > li > span {
+              display: block;
+              font-size: 15px;
+              color: #000000;
+              padding: 3px 10px 3px 25px;
+              text-transform: uppercase; }
+      .main-nav-mobile > ul > li .searchform {
+        margin: 10px; }
+        .main-nav-mobile > ul > li .searchform input[type="text"] {
+          border-width: 1px; }
+      .main-nav-mobile > ul > li.active-menu-item > a > .open-submenu:after {
+        content: '\f106'; }
+
+body.opened-nav-animate {
+  height: 100%;
+  overflow: hidden !important;
+  position: fixed;
+  width: 100%; }
+  body.opened-nav-animate .main-nav-mobile {
+    display: block; }
+  body.opened-nav-animate.admin-bar #wpadminbar {
+    margin-top: -32px; }
+  body.opened-nav-animate.opened-nav .main-nav-mobile > ul li {
+    -webkit-transform: translateX(0);
+    -khtml-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    filter: alpha(opacity=100);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    -ms-opacity: 1;
+    -o-opacity: 1;
+    opacity: 1; }
+
 /* ==============================
    10. Footer
    ============================== */
