--- a/wp-content/themes/wingman/assets/css/queries.css
+++ b/wp-content/themes/wingman/assets/css/queries.css
@@ -49,5 +49,26 @@
   .blog-posts-list .entry-main-content {
     width: 100%;
     margin: 0 0 30px; } }
+@media (max-width: 600px) {
+  .woocommerce ul.shop-products.lists li.product .product-image-container,
+  .woocommerce ul.shop-products.lists li.product .product-attr-container {
+    width: 100%;
+    margin: 0 0 30px;
+    padding: 0; }
+
+  .woocommerce .upsells-products > h3,
+  .woocommerce .related-products > h3,
+  .woocommerce .cross-sells > h3 {
+    font-size: 30px; } }
+@media (max-width: 480px) {
+  .comment-content {
+    padding: 0;
+    border: none; }
+    .comment-content > .star-rating {
+      float: none;
+      margin-bottom: 10px; }
+
+  .comment-meta {
+    padding: 0; } }
 
 /*# sourceMappingURL=queries.css.map */
