--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -388,7 +388,7 @@
       background: $qty_bg;
       display: block;
       float: left;
-      margin: 0 30px 0 0;
+      margin: 0 30px 10px 0;
       padding:0 20px;
       position: relative;
       width: 87px;
@@ -1201,6 +1201,7 @@ body{
 			    	width:67%;
 				    float:left;
 				    padding-left:30px;
+            position: relative;
 			    }
 			    .product-image-content{
 			    	.product-image-tool,
@@ -1610,6 +1611,7 @@ body{
 			}
 			.functional-buttons-product{
 				float: left;
+        margin-bottom: 10px;
         .functional-buttons{
           > div{
             float: left;
@@ -1729,6 +1731,7 @@ body{
                 background: $title-text;
                 color: $white;
                 text-transform: uppercase;
+                margin-bottom: 10px;
               }
               &:hover{
                   color: $white;
