--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -120,7 +120,7 @@ p {
 }
 
 #content {
-  padding: 100px 0;
+  padding: 60px 0 100px;
 }
 
 /* ==============================
@@ -2757,7 +2757,7 @@ article.post-item.post-layout-classic {
    ============================== */
 .page-header {
   margin: 0;
-  padding: 90px 0 45px;
+  padding: 90px 0 0;
   border: none;
   background: none;
   color: $title-text;
