--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -143,7 +143,7 @@ p {
   overflow: hidden; }
 
 #content {
-  padding: 100px 0; }
+  padding: 60px 0 100px; }
 
 /* ==============================
    3. Typography
@@ -2657,7 +2657,7 @@ article.post-item.post-layout-classic {
    ============================== */
 .page-header {
   margin: 0;
-  padding: 90px 0 45px;
+  padding: 90px 0 0;
   border: none;
   background: none;
   color: #252525; }
