--- a/wp-content/themes/wingman/assets/css/queries.scss
+++ b/wp-content/themes/wingman/assets/css/queries.scss
@@ -32,7 +32,9 @@ only screen and (min-resolution: 144dpi) {
 @media (max-width: 1199px) {
 
   .sticky-placeholder,
-  #header-content{
+  #header-content,
+  #header-inner > .container,
+  .nav-container-inner{
     display: none;
   }
   #header-content-mobile{
