--- a/wp-content/themes/wingman/assets/css/queries.css
+++ b/wp-content/themes/wingman/assets/css/queries.css
@@ -40,6 +40,12 @@
 
   #header-content-mobile {
     display: block; } }
+@media (max-width: 991px) {
+  .woocommerce-products-carousel-tab ul.block-heading-tabs li {
+    display: block;
+    margin: 0 0 15px; }
+    .woocommerce-products-carousel-tab ul.block-heading-tabs li:last-child {
+      margin-bottom: 0; } }
 @media (max-width: 767px) {
   .main-class.col-md-12 .entry-header,
   .main-class.col-md-12 .entry-content-outer,
