--- a/wp-content/themes/wingman/assets/css/queries.css
+++ b/wp-content/themes/wingman/assets/css/queries.css
@@ -41,18 +41,16 @@
   #header-content-mobile {
     display: block; } }
 @media (max-width: 991px) {
-<<<<<<< HEAD
+  .woocommerce table.cart tbody td.actions {
+    padding: 20px; }
+    .woocommerce table.cart tbody td.actions a, .woocommerce table.cart tbody td.actions input {
+      margin: 0 2%; } }
+@media (max-width: 991px) {
   .woocommerce-products-carousel-tab ul.block-heading-tabs li {
     display: block;
     margin: 0 0 15px; }
     .woocommerce-products-carousel-tab ul.block-heading-tabs li:last-child {
       margin-bottom: 0; } }
-=======
-  .woocommerce table.cart tbody td.actions {
-    padding: 20px; }
-    .woocommerce table.cart tbody td.actions a, .woocommerce table.cart tbody td.actions input {
-      margin: 0 2%; } }
->>>>>>> origin/master
 @media (max-width: 767px) {
   .main-class.col-md-12 .entry-header,
   .main-class.col-md-12 .entry-content-outer,
