--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -181,6 +181,52 @@ a {
 .font-black {
   font-weight: 900; }
 
+blockquote,
+.blockquote {
+  border: 1px solid #82c14f;
+  font-size: 18px;
+  font-family: "Josefin Slab", serif;
+  line-height: 24px;
+  padding: 30px 30px 23px 30px;
+  position: relative; }
+  blockquote:after,
+  .blockquote:after {
+    font-family: FontAwesome;
+    content: "";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 60px;
+    letter-spacing: 0.1em;
+    color: #e5e5e5;
+    position: absolute;
+    bottom: 35px;
+    right: 45px; }
+  blockquote p,
+  .blockquote p {
+    margin-bottom: 20px; }
+  blockquote footer,
+  blockquote small,
+  .blockquote footer,
+  .blockquote small {
+    padding-top: 14px;
+    position: relative;
+    font-weight: 700;
+    color: #252525;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    font-size: 14px; }
+    blockquote footer:before,
+    blockquote small:before,
+    .blockquote footer:before,
+    .blockquote small:before {
+      content: "";
+      width: 31px;
+      height: 2px;
+      background: #252525;
+      position: absolute;
+      top: 0;
+      left: 0; }
+
 /* ==============================
    4. Forms fields
    ============================== */
@@ -249,7 +295,7 @@ select {
   width: 100%;
   height: 40px;
   line-height: 1.42857;
-  padding: 6px 25px 6px 12px;
+  padding: 6px 16px 6px 12px;
   border: 1px solid #f0f0f0;
   cursor: pointer;
   color: #c5c5c5; }
@@ -3674,21 +3720,30 @@ form.wpcf7-form p {
     left: 0;
     width: 100%;
     z-index: 2;
-    padding: 30px;
-    filter: alpha(opacity=0);
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    -webkit-opacity: 0;
-    -khtml-opacity: 0;
-    -moz-opacity: 0;
-    -ms-opacity: 0;
-    -o-opacity: 0;
-    opacity: 0;
-    -webkit-transition: all 0.2s ease-in-out 0s;
-    -khtml-transition: all 0.2s ease-in-out 0s;
-    -moz-transition: all 0.2s ease-in-out 0s;
-    -ms-transition: all 0.2s ease-in-out 0s;
-    -o-transition: all 0.2s ease-in-out 0s;
-    transition: all 0.2s ease-in-out 0s; }
+    padding: 30px; }
+    .team .team-attr h4.name,
+    .team .team-attr .agency,
+    .team .team-attr ul {
+      -webkit-transition: all 0.2s ease 0s;
+      -khtml-transition: all 0.2s ease 0s;
+      -moz-transition: all 0.2s ease 0s;
+      -ms-transition: all 0.2s ease 0s;
+      -o-transition: all 0.2s ease 0s;
+      transition: all 0.2s ease 0s;
+      filter: alpha(opacity=0);
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+      -webkit-opacity: 0;
+      -khtml-opacity: 0;
+      -moz-opacity: 0;
+      -ms-opacity: 0;
+      -o-opacity: 0;
+      opacity: 0;
+      -webkit-transform: translatey(40px);
+      -khtml-transform: translatey(40px);
+      -moz-transform: translatey(40px);
+      -ms-transform: translatey(40px);
+      -o-transform: translatey(40px);
+      transform: translatey(40px); }
     .team .team-attr h4.name {
       padding-bottom: 6px;
       margin-bottom: 17px;
@@ -3696,7 +3751,13 @@ form.wpcf7-form p {
       font-size: 22px;
       color: #FFFFFF;
       letter-spacing: 0.2em;
-      text-transform: none; }
+      text-transform: none;
+      -webkit-transition-delay: 0.6s;
+      -khtml-transition-delay: 0.6s;
+      -moz-transition-delay: 0.6s;
+      -ms-transition-delay: 0.6s;
+      -o-transition-delay: 0.6s;
+      transition-delay: 0.6s; }
       .team .team-attr h4.name:before {
         content: "";
         width: 39px;
@@ -3708,11 +3769,23 @@ form.wpcf7-form p {
     .team .team-attr .agency {
       font-size: 12px;
       color: #82c14f;
-      margin-bottom: 18px; }
+      margin-bottom: 18px;
+      -webkit-transition-delay: 0.4s;
+      -khtml-transition-delay: 0.4s;
+      -moz-transition-delay: 0.4s;
+      -ms-transition-delay: 0.4s;
+      -o-transition-delay: 0.4s;
+      transition-delay: 0.4s; }
     .team .team-attr ul {
       margin: 0;
       padding: 0;
-      list-style: none; }
+      list-style: none;
+      -webkit-transition-delay: 0.2s;
+      -khtml-transition-delay: 0.2s;
+      -moz-transition-delay: 0.2s;
+      -ms-transition-delay: 0.2s;
+      -o-transition-delay: 0.2s;
+      transition-delay: 0.2s; }
       .team .team-attr ul li {
         float: left;
         margin-right: 35px; }
@@ -3721,8 +3794,7 @@ form.wpcf7-form p {
           font-size: 18px; }
           .team .team-attr ul li a:hover, .team .team-attr ul li a:focus {
             color: #82c14f; }
-  .team:hover:before,
-  .team:hover .team-attr {
+  .team:hover:before {
     filter: alpha(opacity=100);
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     -webkit-opacity: 1;
@@ -3731,6 +3803,44 @@ form.wpcf7-form p {
     -ms-opacity: 1;
     -o-opacity: 1;
     opacity: 1; }
+  .team:hover .team-attr h4.name,
+  .team:hover .team-attr .agency,
+  .team:hover .team-attr ul {
+    filter: alpha(opacity=100);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    -ms-opacity: 1;
+    -o-opacity: 1;
+    opacity: 1;
+    -webkit-transform: translatey(0);
+    -khtml-transform: translatey(0);
+    -moz-transform: translatey(0);
+    -ms-transform: translatey(0);
+    -o-transform: translatey(0);
+    transform: translatey(0); }
+  .team:hover .team-attr h4.name {
+    -webkit-transition-delay: 0.2s;
+    -khtml-transition-delay: 0.2s;
+    -moz-transition-delay: 0.2s;
+    -ms-transition-delay: 0.2s;
+    -o-transition-delay: 0.2s;
+    transition-delay: 0.2s; }
+  .team:hover .team-attr .agency {
+    -webkit-transition-delay: 0.4s;
+    -khtml-transition-delay: 0.4s;
+    -moz-transition-delay: 0.4s;
+    -ms-transition-delay: 0.4s;
+    -o-transition-delay: 0.4s;
+    transition-delay: 0.4s; }
+  .team:hover .team-attr ul {
+    -webkit-transition-delay: 0.6s;
+    -khtml-transition-delay: 0.6s;
+    -moz-transition-delay: 0.6s;
+    -ms-transition-delay: 0.6s;
+    -o-transition-delay: 0.6s;
+    transition-delay: 0.6s; }
 
 /**
 * 11.3. Contact Info
@@ -3889,7 +3999,7 @@ form.wpcf7-form p {
 .woocommerce .woocommerce-pagination,
 .pagination {
   display: block;
-  margin: 20px 0 10px;
+  margin: 20px 0 30px;
   position: relative;
   text-align: center;
   padding: 0; }
