--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -168,6 +168,46 @@ a {
   font-weight: 900;
 }
 
+blockquote,
+.blockquote{
+  border: 1px solid $primary-color;
+  font-size: 18px;
+  font-family: $heading-font;
+  line-height: 24px;
+  padding: 30px 30px 23px 30px;
+  position: relative;
+  &:after{
+    @include FontAwesome('\f10d');
+    font-size: 60px;
+    letter-spacing: 0.1em;
+    color: $border-color;
+    position: absolute;
+    bottom: 35px;
+    right: 45px;
+  }
+  p{
+    margin-bottom: 20px;
+  }
+  footer,
+  small{
+    padding-top: 14px;
+    position: relative;
+    font-weight: 700;
+    color: $title-text;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    font-size: 14px;
+    &:before{
+      content: "";
+      width: 31px;
+      height: 2px;
+      background: $title-text;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+}
 
 
 /* ==============================
@@ -206,7 +246,7 @@ select {
   width: 100%;
   height: 40px;
   line-height: 1.42857;
-  padding: 6px 25px 6px 12px; 
+  padding: 6px 16px 6px 12px; 
   border: 1px solid #f0f0f0;
   cursor: pointer;
   color: $gray;
@@ -3998,8 +4038,13 @@ form.wpcf7-form{
     width: 100%;
     z-index: 2;
     padding: 30px;
-    @include opacity(0);
-    @include transition();
+    h4.name,
+    .agency,
+    ul{
+      @include transition('all 0.2s ease 0s');
+      @include opacity(0);
+      @include transform(translatey(40px));
+    }
     h4.name{
       padding-bottom: 6px;
       margin-bottom: 17px;
@@ -4008,6 +4053,7 @@ form.wpcf7-form{
       color: $white;
       letter-spacing: 0.2em;
       text-transform: none;
+      @include css3-prefix('transition-delay','0.6s');
       &:before{
         content: "";
         width: 39px;
@@ -4022,11 +4068,13 @@ form.wpcf7-form{
       font-size: 12px;
       color: $primary-color;
       margin-bottom: 18px;
+      @include css3-prefix('transition-delay','0.4s');
     }
     ul{
       margin: 0;
       padding: 0;
       list-style: none;
+      @include css3-prefix('transition-delay','0.2s');
       li{
         float: left;
         margin-right: 35px;
@@ -4042,9 +4090,25 @@ form.wpcf7-form{
     }
   }
   &:hover{
-    &:before,
-    .team-attr{
+    &:before{
       @include opacity(1);
+    }
+    .team-attr{
+      h4.name,
+      .agency,
+      ul{
+        @include opacity(1);
+        @include transform(translatey(0));
+      }
+      h4.name{
+        @include css3-prefix('transition-delay','0.2s');
+      }
+      .agency{
+        @include css3-prefix('transition-delay','0.4s');
+      }
+      ul{
+        @include css3-prefix('transition-delay','0.6s');
+      }
     }
   }
 }
@@ -4233,7 +4297,7 @@ form.wpcf7-form{
 .woocommerce .woocommerce-pagination,
 .pagination {
   display: block;
-  margin: 20px 0 10px;
+  margin: 20px 0 30px;
   position: relative;
   text-align: center;
   padding: 0;
