--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1406,56 +1406,68 @@ body .mCSB_scrollTools {
   .woocommerce .product-detail-thumbarea .single-product-main-images {
     border: 1px solid #dfdfdf;
     margin-bottom: 30px; }
-    .woocommerce .product-detail-thumbarea .single-product-main-images .owl-controls {
-      bottom: 15px;
-      margin: 0;
+    .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow {
+      -webkit-transform: translate(0);
+      -khtml-transform: translate(0);
+      -moz-transform: translate(0);
+      -ms-transform: translate(0);
+      -o-transform: translate(0);
+      transform: translate(0);
+      color: #252525;
+      border: 1px solid #000000;
+      bottom: 10px;
+      top: auto;
+      width: 30px;
+      height: 30px;
+      z-index: 10;
+      font-size: 0;
       position: absolute;
-      right: 15px; }
-      .woocommerce .product-detail-thumbarea .single-product-main-images .owl-controls .owl-buttons > div {
-        background: #FFFFFF;
-        color: #999999;
-        display: inline-block;
-        font-size: 18px;
-        height: 30px;
-        line-height: 30px;
-        margin: 0 0 0 5px;
-        padding: 0;
-        text-transform: uppercase;
-        width: 30px;
-        -webkit-box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-        -khtml-box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-        -moz-box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-        -ms-box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-        -o-box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-        box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-        filter: alpha(opacity=100);
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-        -webkit-opacity: 1;
-        -khtml-opacity: 1;
-        -moz-opacity: 1;
-        -ms-opacity: 1;
-        -o-opacity: 1;
-        opacity: 1;
-        -webkit-border-radius: 0;
-        -khtml-border-radius: 0;
-        -moz-border-radius: 0;
-        -ms-border-radius: 0;
-        -o-border-radius: 0;
-        border-radius: 0; }
-        .woocommerce .product-detail-thumbarea .single-product-main-images .owl-controls .owl-buttons > div :hover {
+      background: #f4f6f9; }
+      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev {
+        right: 50px;
+        left: auto; }
+        .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev:before {
+          font-family: FontAwesome;
+          content: "";
+          font-style: normal;
+          font-weight: normal;
+          font-size: 20px;
+          line-height: 28px; }
+        .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev:after {
+          width: 11px;
+          content: "";
+          height: 1px;
+          background: #252525;
+          position: absolute;
+          left: 100%;
+          top: 15px; }
+      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-next {
+        right: 10px; }
+        .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-next:before {
+          font-family: FontAwesome;
+          content: "";
+          font-style: normal;
+          font-weight: normal;
+          font-size: 20px;
+          line-height: 28px; }
+      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:before {
+        color: #252525; }
+      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:hover, .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:focus {
+        color: #82c14f;
+        border-color: #82c14f; }
+        .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:hover:before, .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:focus:before {
           color: #82c14f; }
   .woocommerce .product-detail-thumbarea .single-product-main-thumbnails {
     margin-bottom: 30px;
     margin-left: -14px;
     margin-right: -14px;
     width: auto; }
-    .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .owl-item {
-      padding: 0 14px; }
-      .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .owl-item.synced img {
+    .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-slide {
+      margin: 0 14px;
+      border: 1px solid #e5e5e5;
+      display: inline-block; }
+      .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-slide.slick-current {
         border-color: #82c14f; }
-      .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .owl-item img {
-        border: 1px solid #e5e5e5;
-        display: inline-block; }
   .woocommerce .product-detail-thumbarea.slick-carousel {
     position: relative;
     padding-left: 130px; }
@@ -1491,7 +1503,15 @@ body .mCSB_scrollTools {
         -ms-opacity: 0;
         -o-opacity: 0;
         opacity: 0;
-        z-index: 1; }
+        position: absolute;
+        font-size: 0;
+        background: #f4f6f9;
+        width: 20px;
+        height: 20px;
+        z-index: 1;
+        text-align: center;
+        padding: 0;
+        line-height: 18px; }
         .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-prev {
           top: 15px; }
           .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-prev:before {
@@ -1499,7 +1519,7 @@ body .mCSB_scrollTools {
             content: "";
             font-style: normal;
             font-weight: normal;
-            line-height: 10px; }
+            line-height: 16px; }
         .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-next {
           bottom: 15px;
           top: auto; }
@@ -1533,50 +1553,6 @@ body .mCSB_scrollTools {
         -ms-opacity: 1;
         -o-opacity: 1;
         opacity: 1; }
-    .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow {
-      -webkit-transform: translate(0);
-      -khtml-transform: translate(0);
-      -moz-transform: translate(0);
-      -ms-transform: translate(0);
-      -o-transform: translate(0);
-      transform: translate(0);
-      color: #252525;
-      border: 1px solid #000000;
-      bottom: 10px;
-      top: auto;
-      width: 30px;
-      height: 30px;
-      z-index: 10; }
-      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-prev {
-        right: 50px;
-        left: auto; }
-        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-prev:before {
-          font-family: FontAwesome;
-          content: "";
-          font-style: normal;
-          font-weight: normal; }
-        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-prev:after {
-          width: 11px;
-          content: "";
-          height: 1px;
-          background: #252525;
-          position: absolute;
-          left: 100%;
-          top: 15px; }
-      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-next {
-        right: 10px; }
-        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow.slick-next:before {
-          font-family: FontAwesome;
-          content: "";
-          font-style: normal;
-          font-weight: normal; }
-      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:before {
-        color: #252525; }
-      .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:hover, .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:focus {
-        color: #82c14f;
-        border-color: #82c14f; }
-        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:hover:before, .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-images .slick-arrow:focus:before {
-          color: #82c14f; }
 
 .woocommerce-page div.product.wc-single-product .quantity-group span,
 .woocommerce div.product.wc-single-product .quantity-group span {
