--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -1464,54 +1464,71 @@ body{
 	.product-detail-thumbarea{
 		position: relative;
 		.single-product-main-images{
-          border: 1px solid $border-third-color;
-          margin-bottom: 30px;
-          .owl-controls{
-            bottom: 15px;
-            margin: 0;
-            position: absolute;
-            right: 15px;
-            .owl-buttons{
-              > div{
-                background: $white;
-                color: #999999;
-                display: inline-block;
-                font-size: 18px;
-                height: 30px;
-                line-height: 30px;
-                margin: 0 0 0 5px;
-                padding: 0;
-                text-transform: uppercase;
-                width: 30px;
-
-                @include box-shadow(1px, 0, 3px, rgba($black, .1));
-                @include opacity(1);
-                @include border-radius(0);
-
-                :hover{
-                  color: $primary-color;
-                }
-              }
-            }
+        border: 1px solid $border-third-color;
+        margin-bottom: 30px;
+        .slick-arrow{
+        @include transform(translate(0));
+        color: $title-text;
+        border:1px solid $black;
+        bottom: 10px;
+        top:auto;
+        width: 30px;
+        height: 30px;
+        z-index: 10;
+        font-size: 0;
+        position: absolute;
+        background: $qty_bg;
+        &.slick-prev{
+          right: 50px;
+          left: auto;
+          &:before{
+            @include FontAwesome('\f104');
+            font-size: 20px;
+            line-height: 28px;
           }
+          &:after{
+            width: 11px;
+            content: "";
+            height: 1px;
+            background: $title-text;
+            position: absolute;
+            left: 100%;
+            top: 15px;
+          }
+        }
+        &.slick-next{
+          right: 10px;
+          &:before{
+            @include FontAwesome('\f105');
+            font-size: 20px;
+            line-height: 28px;
+          }
+        }
+        &:before{
+          color: $title-text;
+        }
+        &:hover,&:focus{
+          color: $primary-color;
+          border-color: $primary-color;
+          &:before{
+            color: $primary-color;
+          }
+        }
+      }
 		}
 		.single-product-main-thumbnails{
 			margin-bottom: 30px;
 			margin-left: -14px;
-		    margin-right: -14px;
-		    width: auto;
-		    .owl-item{
-		    	padding: 0 14px;
-		    	&.synced{
-		    		img{
-		    			border-color:$primary-color;
-		    		}
-		    	}
-		    	img{
-		    		border:1px solid $border-color;
-    				display: inline-block;
-		    	}
-		    }
+	    margin-right: -14px;
+	    width: auto;
+	    .slick-slide{
+	    	margin: 0 14px;
+        border:1px solid $border-color;
+        display: inline-block;
+	    	&.slick-current{
+	    		border-color:$primary-color;
+	    	}
+	    }
 		}
 
     &.slick-carousel{
@@ -1539,12 +1556,20 @@ body{
           border:1px solid $black;
           @include transform(translate(0));
           @include opacity(0);
+          position: absolute;
+          font-size: 0;
+          background: $qty_bg;
+          width: 20px;
+          height: 20px;
           z-index: 1;
+          text-align: center;
+          padding: 0;
+          line-height: 18px;
           &.slick-prev{
             top:15px;
             &:before{
               @include FontAwesome('\f106');
-              line-height: 10px;
+              line-height: 16px;
             }
           }
           &.slick-next{
@@ -1570,50 +1595,6 @@ body{
         &:hover{
           .slick-arrow{
             @include opacity(1);
-          }
-        }
-      }
-      .single-product-main-images{
-        .slick-arrow{
-          @include transform(translate(0));
-          color: $title-text;
-          border:1px solid $black;
-          bottom: 10px;
-          top:auto;
-          width: 30px;
-          height: 30px;
-          z-index: 10;
-          &.slick-prev{
-            right: 50px;
-            left: auto;
-            &:before{
-              @include FontAwesome('\f104');
-            }
-            &:after{
-              width: 11px;
-              content: "";
-              height: 1px;
-              background: $title-text;
-              position: absolute;
-              left: 100%;
-              top: 15px;
-            }
-          }
-          &.slick-next{
-            right: 10px;
-            &:before{
-              @include FontAwesome('\f105');
-            }
-          }
-          &:before{
-            color: $title-text;
-          }
-          &:hover,&:focus{
-            color: $primary-color;
-            border-color: $primary-color;
-            &:before{
-              color: $primary-color;
-            }
           }
         }
       }
