--- a/wp-content/themes/wingman/assets/css/queries.css
+++ b/wp-content/themes/wingman/assets/css/queries.css
@@ -54,7 +54,18 @@
     display: block;
     margin: 0 0 15px; }
     .woocommerce-products-carousel-tab ul.block-heading-tabs li:last-child {
-      margin-bottom: 0; } }
+      margin-bottom: 0; }
+
+  .woocommerce-category-products-tab ul.block-heading-tabs li {
+    display: block;
+    margin: 0 0 15px; }
+    .woocommerce-category-products-tab ul.block-heading-tabs li:last-child {
+      margin-bottom: 0; }
+
+  .testimonial-carousel-wrapper .owl-carousel-kt .owl-pagination .owl-page {
+    width: 50px;
+    height: 50px;
+    margin: 10px 15px; } }
 @media (max-width: 767px) {
   .main-class.col-md-12 .entry-header,
   .main-class.col-md-12 .entry-content-outer,
