--- a/wp-content/themes/wingman/assets/css/queries.scss
+++ b/wp-content/themes/wingman/assets/css/queries.scss
@@ -82,6 +82,31 @@ only screen and (min-resolution: 144dpi) {
       }
     }
   }
+
+  .woocommerce-category-products-tab{
+    ul.block-heading-tabs{
+      li{
+        display: block;
+        margin: 0 0 15px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  .testimonial-carousel-wrapper {
+    .owl-carousel-kt {
+      .owl-pagination {
+        .owl-page{
+          width: 50px;
+          height: 50px;
+          margin: 10px 15px;
+        }
+      }
+    }
+  }
+
 }
 
 
