--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -2455,33 +2455,34 @@ div.swatch-wrapper{
     text-align: center;
     li{
       display: inline-block;
-      padding: 0 10px;
       margin: 0 20px;
-      position: relative;
 
-      &:before,
-      &:after{
-        position: absolute;
-        content:"";
-        width:1px;
-        height:10px;
-        background: $primary-color;
-        top:50%;
-        @include transform(translatey(-65%));
-        @include transition();
-        @include opacity(0);
-      }
-      &:before{
-        left: -10px;
-      }
-      &:after{
-        right:-10px;
-      }
       a{
+        padding: 0 10px;
         font-weight:600;
         text-transform: uppercase;
         color:$main-text;
         letter-spacing: 0.2em;
+        position: relative;
+        display: inline-block;
+        &:before,
+        &:after{
+          position: absolute;
+          content:"";
+          width:1px;
+          height:10px;
+          background: $primary-color;
+          top:50%;
+          @include transform(translatey(-65%));
+          @include transition();
+          @include opacity(0);
+        }
+        &:before{
+          left: -10px;
+        }
+        &:after{
+          right:-10px;
+        }
       }
 
       a:hover,
@@ -2490,16 +2491,17 @@ div.swatch-wrapper{
       }
 
       &.ui-tabs-active{
-
-        &:before,
-        &:after{
-          @include opacity(1);
-        }
-        &:before{
-          left: 0;
-        }
-        &:after{
-          right: 0;
+        a{
+          &:before,
+          &:after{
+            @include opacity(1);
+          }
+          &:before{
+            left: 0;
+          }
+          &:after{
+            right: 0;
+          }
         }
       }
     }
