--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -4048,6 +4048,10 @@ form.wpcf7-form{
 
 .team{
   position: relative;
+  margin-bottom: 30px;
+  .team-avatar{
+    width: 100%;
+  }
   &:before{
     content: "";
     width: 100%;
