--- a/wp-content/themes/wingman/assets/css/queries.scss
+++ b/wp-content/themes/wingman/assets/css/queries.scss
@@ -68,6 +68,20 @@ only screen and (min-resolution: 144dpi) {
 			}
 		}
 	}
+	.wrapper-comingsoon {
+	  &.style1{
+	    .coming-soon{
+	      .wrap{
+	        display: inline-block;
+	        width: 50%;
+	        float: left;
+	        &:nth-child(2n){
+	          border: none;
+	        }
+	      }
+	    }
+	  }
+	}
 }
 
 @media (max-width: 991px) {
@@ -256,5 +270,26 @@ only screen and (min-resolution: 144dpi) {
 		.product{
 			width: 100%!important;
 		}
+	}
+
+	.wrapper-comingsoon {
+	  &.style1{
+	    .coming-soon{
+	      .wrap{
+	        float: none;
+	        display: block;
+	        border: none;
+	        border-bottom: 1px solid $border-third-color;
+	        margin:0 30px 20px;
+	        padding: 0 0 20px;
+	        &:nth-child(2n){
+	          border-bottom: 1px solid $border-third-color;
+	        }
+	        &:last-child{
+	          border: none;
+	        }
+	      }
+	    }
+	  }
 	}
 }
